# icu-risk

./: .env  .gitignore  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml  static.yml
assets/: index-B37YQLVA.css  index-CEV14PDR.js  index-CIArCGV4.js  index-Cuic1Gzh.js
model/: RealMIP_Gen.pth  RealMIP_Pre.pth  data_scaler.pkl
scripts/: dev.sh
server/: demoServer.mjs
server_fastapi/: app.py  model_adapter.py  model_impl.py  requirements.txt
server_fastapi/sql/: init.sql
src/: main.tsx
src/app/: App.tsx
src/app/components/: AlertManagement.tsx  PatientDetailView.tsx  PatientListDashboard.tsx  RiskBadge.tsx  RiskSparkline.tsx
src/app/context/: ThemeContext.tsx
src/app/data/: mockData.ts
src/styles/: fonts.css  theme.css
