[project]
name = "icu-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.115.5",
    "joblib==1.4.2",
    "numpy==2.1.3",
    "psycopg2>=2.9.11",
    "scikit-learn==1.5.2",
    "torch==2.4.1",
    "uvicorn==0.30.6",
]
